Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5568,5 +5568,181 @@
   "d040c8bd-23d1-42c3-a609-5e2febc12f07": "Stel in wie met dit e-mailadres kan versturen en wie verzonden berichten kan bekijken.",
   "e01618ed-7f4f-4a80-a926-3afb7b3806fc": "Kies hier wie berichten kan versturen en wie verstuurde berichten kan bekijken.",
   "a3e11da3-1894-4519-99a8-ac5fb32c555d": "Naam",
-  "ea84aed8-48ce-4a43-b391-0a4a16782909": "Verwijderen"
+  "ea84aed8-48ce-4a43-b391-0a4a16782909": "Verwijderen",
+  "ace4d2e8-88d6-479f-bd8b-d576cc0ed1f2": "Je kan de ontvangerslijst alleen aanpassen als de e-mail nog een concept is",
+  "02b05c0d-908b-4200-8fb8-5fc01f539514": "Je kan enkel wijzigen of een bericht via e-mail verzonden wordt als het bericht nog niet werd verzonden.",
+  "d499972f-270c-44f6-ad7e-9d5359aef609": "Je hebt niet voldoende toegangsrechten om alle email ontvangers te bekijken. Filter op één specifieke e-mail.",
+  "9f352fd4-5e4d-4899-81ce-b69889ebfe9d": "Je hebt niet voldoende toegangsrechten om alle email ontvangers te bekijken.",
+  "590a37ed-0f3a-4c66-8e20-08ac00ae761d": "Je hebt geen toegangsrechten tot de ontvangers van deze email",
+  "ffbebae7-eac3-44fe-863b-25942c5be7d0": "De ontvanger heeft zich afgemeld voor e-mails",
+  "f6ca0939-f191-4aba-9c53-cd370453c0bc": "Deze ontvanger komt voor op de gedeelde bounce of spamlijst. De ontvanger was eerder permanent onbereikbaar of heeft eerder een e-mail als spam gemarkeerd.",
+  "491156e4-a75d-4487-a97e-b208cd3a1d11": "Deze e-mail bestaat niet (meer)",
+  "be46002c-d77e-42ca-b163-23bde0bc628c": "Je hebt niet voldoende toegangsrechten om te filteren op deze e-mail",
+  "212d39e4-8da5-4096-84bb-bd7fadc192fc": "Deze ontvanger komt voor op de gedeelde bounce of spamlijst. De ontvanger was eerder permanent onbereikbaar of heeft eerder een e-mail als spam gemarkeerd",
+  "e2eeb4a3-2c32-4ba2-b991-3e139402225f": "Dit e-mailadres staat niet op een whitelist voor het versturen van e-mails in deze omgeving",
+  "f56ad718-fda0-490e-9120-ee0bd6ebbc43": "Beste,",
+  "5403b466-98fe-48ac-beff-38acf7c9734d": "Je kan op het ledenportaal inloggen op {email}.",
+  "18a411e7-8fec-4d99-bde1-0cbc9c3f5cf8": "Je kan op het ledenportaal een nieuw account aanmaken op het e-mailadres {email}.",
+  "3ab6ddc1-7ddc-4671-95d2-64994a5d36cc": "Je kan op het ledenportaal een nieuw account aanmaken op het e-mailadres {email}",
+  "e2519632-c495-4629-9ddb-334a4f00e272": "De beveiligingscode voor {firstName} is {securityCode}.",
+  "41db9fc8-77f4-49a7-a77b-40a4ae8c4d8f": "Onbekende fout",
+  "457ec920-2867-4d59-bbec-4466677e1b50": "Er ging iets mis bij het aanmaken van de ontvangers. Probeer je selectie aan te passen. Neem contact op als het probleem zich blijft voordoen.",
+  "a0524f41-bdde-4fcc-9a9a-9350905377d8": "Deze e-mail is verwijderd en kan niet verzonden worden.",
+  "9fe3de8e-090c-4949-97da-4810ce9e61c7": "Geen ontvangers gevonden",
+  "616cf7ee-8a23-4fd0-b4f6-ec3d9d493bd7": "Te veel geselecteerde waarden in jouw filter of selectie ({count}). Het maximum is 200.",
+  "19da8d23-acea-43c2-bfdd-742447ca57f1": "Leden",
+  "3f4c9896-7f02-4b49-ad29-2d363a8af71f": "Inschrijvingen",
+  "369772ac-070a-4d86-a5f4-9d7b24b3dbec": "Afzenders",
+  "37d634d9-b756-419c-87c8-d83476865518": "Wordt gebruikt voor berichten die vanaf het platform worden verstuurd",
+  "402b626e-6909-4e07-b246-04ad5a203e8e": "Logo organisatie",
+  "aa45394d-82c6-480b-90d1-7011a7b78f24": "Logo organisatie (dark mode)",
+  "f6c28298-1b38-4794-988e-f8c8eb496acf": "Gesloten",
+  "22703e89-376e-453d-9fc6-c449193be678": "Geopend",
+  "92e7bbdd-f3b7-4794-b3b1-2b824ca8c633": "Berichten en e-mails",
+  "64cc9c20-5d86-465b-921d-beacc26036df": "Combineren",
+  "db9f28bd-d199-4a25-aa06-b6435f092f20": "In sommige situaties (bv. in combinatie met artikelvoorwaarden), is het mogelijk dat er meerdere productkortingen in een winkelmandje actief zijn. Stamhoofd kan dan de korting op hetzelfde item geven, als dat voordeliger zou zijn.",
+  "877afa7e-d709-4d7b-bc4f-5384a2da8495": "Meerdere kortingen op hetzelfde stuk toestaan",
+  "945cc145-81e5-4fa9-ab09-c4c2222c8c6e": "Naamloos",
+  "a8c4cecd-b9da-4373-a50a-7158dd770c82": "Alle wachtlijsten worden gedupliceerd in het nieuwe werkjaar. Als je de wachtlijst wilt verderzetten kan je terugkeren naar het vorige werkjaar en alle leden van daaruit toevoegen aan de nieuwe wachtlijst.",
+  "ac8f8aa5-466f-4552-b658-de017a97839f": "Berichten",
+  "8fec0620-6293-4573-884d-07d7ab814a77": "Geen berichten gevonden",
+  "314810ef-ff16-4b22-b8a5-399d5d820a4a": "Opnieuw proberen",
+  "2b799708-dc8a-4ab5-ad15-11c89bfa23da": "Inhoud aanpassen en versturen",
+  "a7c3d104-58c1-41ac-8a33-febe6f474215": "Inhoud aanpassen",
+  "d67c7c61-5387-48a5-b63b-a78682a54fd8": "Verwijderen",
+  "1b19e64e-c1ab-4755-bef6-a9f3f5b551d6": "{count} ontvangers hebben hun email als spam gemarkeerd",
+  "0415018c-c90d-489a-901f-a4729b8c1d24": "Bekijken",
+  "0cd6f68d-48b9-46af-a290-bee4aa0c853c": "{count} ontvangers konden de email niet ontvangen (hard bounce)",
+  "2bcd25b3-fda7-41e2-bf92-e7c1bd2780f2": "{count} ontvangers konden de email niet ontvangen (soft bounce)",
+  "49e5596f-9e08-4766-b159-2678580a00c3": "Eén email kon niet worden verzonden",
+  "de176a16-fcf1-499c-aa77-0323d18a687d": "Eén email werd overgeslagen",
+  "26e90995-ce5d-48ff-96e8-21e39e489d14": "Afzender van het bericht",
+  "9e736403-a321-4462-8c8d-c7234fa1633c": "Gepubliceerd door",
+  "089accda-4b1f-4767-8e46-d7f71c24068a": "Dit is enkel zichtbaar voor beheerders",
+  "a7685897-9158-4a82-bee1-9b74187ec599": "Niet verzonden als e-mail",
+  "0cc07b8f-9eaf-413a-9c2d-17363611f2d4": "Dit bericht is enkel zichtbaar in het ledenportaal",
+  "e32d4a22-592a-4917-b115-35ee6ca50290": "Niet zichtbaar in ledenportaal",
+  "c07ff2d7-46c5-429d-bcff-c77c16017611": "Dit bericht is enkel verzonden als e-mail",
+  "221a0568-b308-4803-bd53-cb633f726f10": "E-mail ontvangers",
+  "7c093146-6de1-413b-bbda-2ada3fd63dea": "Acties",
+  "02f663a0-3c65-495e-a485-71a942f06c3a": "Probeer het bericht opnieuw te versturen",
+  "0089568d-e3cf-4dc7-b96a-2ec7fe233227": "Wijzig inhoud",
+  "f547c5e3-f179-44b0-b15f-19a5813be244": "Wijzig inhoud en versturen",
+  "890739a4-277c-4757-b6e6-c9f535d138a3": "Je kan de inhoud van een bericht wijzigen, maar dit heeft enkel invloed op het zichtbare bericht in het ledenportaal.",
+  "31894c35-aca4-441e-bdfb-f45ed7e125d7": "Wijzig zichtbaarheid",
+  "8e074663-072b-4331-b6e9-e472969437a2": "Stel in of het bericht zichtbaar is in het ledenportaal of niet.",
+  "cde18ff3-28ea-40ad-b385-37129f4091c4": "Dit bericht zal niet langer zichtbaar zijn en heeft uiteraard geen effect op reeds verzonden e-mails. Je kan dit niet ongedaan maken.",
+  "9e0c8c63-6022-4742-918e-2716247d4c2f": "Deze e-mail opnieuw proberen te versturen?",
+  "3dc84002-909a-45e2-a033-317be0a09c4e": "Ja, opnieuw proberen",
+  "c284a7c8-69bb-4ceb-bf01-5f952c453aa9": "Een e-mail wordt nooit meerdere keren naar dezelfde persoon verstuurd",
+  "c3a06b52-d25c-4ec4-afe7-208773e1332e": "Dit bericht verwijderen?",
+  "eee720f3-5e00-429c-a847-cb3d4e237e4d": "Ja, verwijderen",
+  "faed0d06-516e-4a4e-8737-6f33f59c4af4": "{count} emails konden niet worden verzonden",
+  "47503212-d717-45d2-b067-da0813374113": "{count} emails werden overgeslagen",
+  "b72bff25-f6ff-4b0e-8338-32b551a5465a": "Vorige ontvanger",
+  "af69b2c9-849e-41a6-957e-adfdfb465959": "Volgende ontvanger",
+  "5d83c1fc-37e5-4d57-8581-7a1f629c19b0": "Deze ontvanger heeft deze e-mail als spam gemarkeerd. Deze persoon werd daardoor automatisch geblokkeerd en zal geen e-mails meer ontvangen. <button>Meer info</button>",
+  "cd537ed4-bd5f-4b0c-81d9-1cf09e0b104d": "De e-mail kwam automatisch terug omwille van een permanente reden (zie onder). Deze persoon werd daardoor automatisch geblokkeerd en zal geen e-mails meer ontvangen. <button>Meer info</button>",
+  "1db89db3-5838-4fd7-a7c4-d52d5478e033": "De e-mail kwam automatisch terug omwille van een tijdelijke reden (zie onder). <button>Meer info</button>",
+  "5ac4d81e-fdd2-4699-8294-a5890ac34520": "Meerdere e-mails werden automatisch samengevoegd tot deze ene e-mail omdat de inhoud gelijk was. Op die manier heeft de ontvanger de e-mail niet meerdere keren ontvangen.",
+  "88b9fe03-3b9c-4e35-a640-d0575dca0edc": "Verzonden naar",
+  "9603f7a2-14f0-4e9b-a191-0fddd8f6ec8a": "Bijhorend lid",
+  "afd3a866-e08e-44da-a93b-ec2ece8cbb78": "Verzonden op",
+  "fbdfafc8-9159-4848-abfd-123e044e7a38": "Overgeslagen bij versturen",
+  "dc400a34-ce43-4e14-a292-6c9be0c0d131": "Fout bij versturen",
+  "b33eff3e-008a-4859-b2c7-dc84ae77a2f8": "Hard bounce",
+  "c39fe846-065d-42b2-a34c-02147926d947": "Soft bounce",
+  "7a814201-064e-42a5-8c2d-1e0bd25717d7": "Ontvanger",
+  "8b0c0037-883c-4b8d-aeb6-cda8b3f40b52": "Hieronder zie je alle ontvangers die een spammelding hebben ingediend voor een e-mail die je hebt verstuurd. Dit kan gebeuren als iemand de e-mail als spam markeert in zijn of haar e-mailprogramma. <button>Meer info</button>",
+  "f6bfb25a-c045-46bc-a6d2-ea475f3bb600": "Bij een hard bounce komt een e-mail na het versturen terug omwille van een permanente reden, bv. als het e-mailadres niet bestaat. <button>Meer info</button>",
+  "ff205726-520f-48f1-a631-a03f735eed68": "Bij een soft bounce komt een e-mail na het versturen terug omwille van een tijdelijke reden, bv. een volle inbox. <button>Meer info</button>",
+  "516a8610-8374-4e6d-bf68-1a45b67b0124": "Spammeldingen",
+  "800c4591-92bb-45f8-9040-5fb1d05dd2b4": "Hard bounces",
+  "cda7f8f5-dfe5-4ac4-a69c-35301da62120": "Soft bounces",
+  "2df0c254-5bfd-4cda-9da4-90352ee2a75f": "Mislukte berichten",
+  "d9b3ba62-99cb-4851-9553-87b5e5f34106": "Ontvangers van ‘{emailSubject}’",
+  "13191887-8762-4b8b-a656-12cf86594579": "Alle ontvangers",
+  "237d0720-13f0-4029-8bf2-4de7e0a9a358": "E-mailadres",
+  "45ebf52f-e5ba-4995-a3d8-e300f5a9e707": "Naam",
+  "b57f80e3-ac03-4238-a489-f92cdceb1086": "Verzonden om",
+  "9f8924bc-bd3e-4379-ac34-92a57b577c7a": "Verzonden om {time}",
+  "c1470365-cafb-4d5d-94c2-bcead6aa77e7": "Eerdere hard bounce",
+  "536208f5-b4db-40e1-9198-2224e2eb9883": "Eerdere spammelding",
+  "8050a561-db7c-4c23-9930-c8474fd37586": "Afgemeld voor deze e-mails",
+  "520e00ad-230c-4004-86bc-20694e56c2af": "In wachtrij",
+  "1eafb06a-5385-42fd-8f1a-2bbaaf735e53": "Meldingen",
+  "409621cb-c4e4-4d3e-bfcc-a1f607e2c907": "Na het versturen van een e-mail is het mogelijk dat we een bericht terug krijgen dat de e-mail niet kon worden bezorgd of als spam werd gemarkeerd. Dat verschijnt hier.",
+  "c096947a-d82c-4478-95b3-b3411da84361": "Spam",
+  "32f0884a-f2fc-4563-8403-b67c482823d3": "E-mail kon permanent niet worden afgeleverd",
+  "793bf19f-ba89-4a0f-9999-06f554194db6": "E-mail kon niet worden afgeleverd",
+  "3ef9e622-426f-4913-89a0-0ce08f4542d4": "Geen",
+  "94337d0a-0522-43be-b337-73ddcf7fdd45": "Verwijderd",
+  "f30a5ed7-b35f-4a96-9a6a-bc27022d85ff": "Bezig met publiceren",
+  "926052ce-f1bd-4bbc-9c86-314bdba8d244": "In wachtrij om te publiceren",
+  "742236ac-6217-4060-99b6-ec62ffdbd4fb": "In wachtrij om te verzenden",
+  "6c837cc0-1832-4bb4-830f-838ebf9911f6": "Deze afzender verwijderen?",
+  "2c9ef19d-3838-4e9a-bb9b-e5f9a714fe4c": "Je kan dit niet ongedaan maken.",
+  "86f953db-fdce-4be5-abc2-bbedaf4ac63a": "Afzender",
+  "c1cb8839-5e99-4b3c-bdcb-cdc43d9821b3": "Publiceren",
+  "87e450fe-1c15-4eed-9066-f78979e44810": "Opslaan",
+  "6804cf8f-b057-41ce-a1b6-9b4f314dcab8": "Toon in het ledenportaal",
+  "3cdf36a0-362b-416c-a6ed-c971fcc5cbd3": "Leden kunnen het bericht terugvinden in hun ledenportaal onder het tabblad ‘Berichten’",
+  "13e9b4f6-f1de-4af7-be7d-7d90f8a400d0": "Versturen als e-mail",
+  "d4ce8bf8-3868-4e41-8152-9a2d9bc05fac": "Het bericht wordt ook als e-mail verzonden",
+  "ce6d1409-7683-406e-836b-d1a48981c060": "Bericht versturen",
+  "1dae9aca-798f-4dde-b420-8fcd4936a3fc": "Bericht instellingen",
+  "62beee9f-1bbc-4d3c-9cec-58981122c5a6": "Ben je zeker dat je de e-mail naar 1 ontvanger wilt versturen?",
+  "3a666229-22b8-41b8-b2f8-17b70c32feb8": "Ben je zeker dat je de e-mail naar {count} ontvangers wilt versturen?",
+  "730f955b-964e-4bb3-8caf-df6c7961c1ae": "Jouw bericht wordt zo gepubliceerd",
+  "98603c16-adf9-4aa9-9685-4a1199dd04d4": "Ben je zeker dat je dit bericht in het ledenportaal wilt publiceren?",
+  "698246ee-bca8-4a79-bf01-82b09c20489d": "Versturen",
+  "69e2b2ce-e8d5-4833-9b6c-05c058743634": "Er ging iets mis bij het aanmaken van de ontvangers: ",
+  "2e498401-c4e4-43cf-9f9e-fbcfc09afad3": "Maak een keuze",
+  "b13d463e-fc48-402e-be6a-95240cc09d7c": "Bericht bewerken",
+  "34bb46fd-8e22-4f18-a4d0-eaa9b382ceb4": "Nieuw bericht",
+  "466a4e32-6cad-41ca-902c-b01ba6215de3": "Vul een onderwerp in",
+  "040cc66c-e27f-4822-87ad-722bca4f5038": "Kies of je het bericht wilt publiceren in het ledenportaal en/of versturen via e-mail via de knoppen bovenaan",
+  "3bd7031d-eb6b-4efc-97f7-53adfcff054a": "Leeftijdsrestricties",
+  "a0391aa7-d4f3-4ee7-af13-61e83124a6da": "Leeftijdsrestrictie toevoegen",
+  "2410f840-edc0-4c3b-8d3a-29f28e1af553": "{x} jaar oud (geboren in {xxxx})",
+  "4f301ef3-a260-4349-a981-af5741a46fce": "Tussen {x} en {y} jaar (geboren tussen {yyyy} en {xxxx})",
+  "b6e28985-659e-4e3a-84fb-53fe9b8ad36a": "Vanaf {x} jaar (geboren voor of in {xxxx})",
+  "4e28f60f-8462-42a1-a6bb-36c05eeb74a2": "Tot {x} jaar (geboren na of in {xxxx})",
+  "b908879d-48c9-4a2c-826c-c88a03ead40d": "is",
+  "cbc2254d-58c7-4f51-bb2d-dcca1635386f": "Aantal emailontvangers",
+  "1c8d06f2-fefa-402f-951a-b89755abbcf9": "Aantal belangrijke mislukte verzendingen",
+  "e05453f8-3355-4c30-bc6a-a81a3b028ae3": "Aantal minder belangrijke mislukte verzendingen",
+  "c991fbae-a87b-473c-927d-7b8b78246f8f": "Aantal hard bounces",
+  "0239e522-2bcb-42b9-83f9-6b37cb8fb96f": "Aantal soft bounces",
+  "31b066b6-aca9-4ebf-ab0c-bd7df2127149": "Aantal spammeldingen",
+  "c251e956-4c8e-455c-b648-ca26d37beea7": "Status",
+  "51302d94-ca1d-4fe6-b7a3-1bf571a306e0": "Foutmelding bij versturen",
+  "671720b3-bc3d-4f54-b79a-28d24937d52e": "Spam complaint",
+  "b2ef4163-dad6-471a-90f3-edcaf6a4e1b8": "Verstuurd vanaf",
+  "f9ce67b8-22b4-4588-a78b-51036839488a": "Onderwerp",
+  "cc262942-6716-4860-8dab-ac0a09245480": "Inhoud",
+  "e62afedb-ad86-4827-ae25-3d17e384fe2c": "Leeftijd",
+  "d35a173c-5d80-48d6-a83b-5274f883a950": "Andere start eind/datum dan werkjaar",
+  "bf07a716-4f44-4534-81a9-a278532b7632": "Startdatum",
+  "5a3e25de-683f-4a20-b02e-ebcc3aca89f6": "Tijdstip",
+  "78e69db3-b94b-47b7-8398-940a204f485e": "Einddatum",
+  "5fe368ac-80c1-4ea3-a148-27ebbb825870": "De proefperiode begint pas te lopen vanaf de startdatum van de inschrijvingsgroep op {start}.",
+  "7c4ca473-3c49-45fb-bdd2-b87399a69e62": "Lidnummer",
+  "3e128951-fbcd-4b44-88a3-6c5340ce1dfc": "optioneel",
+  "c3d036e9-60ec-48e1-85a8-e801dc305466": "Inschrijvingsgroep",
+  "aa592704-705f-47f8-97ed-805b46c87e40": "Standaard leeftijdsgroep",
+  "836c2cd3-32a3-43f2-b09c-600170fcd9cb": "Onbekend",
+  "b652957b-2037-4f9e-8b77-169b3e1b9506": "Een lid kan dubbel staan in de lijst als het meerdere inschrijvingen heeft.",
+  "a512b8a2-163c-4f69-94f7-ed9c1c3ab4f7": "ID lid",
+  "048392a6-9ee6-42f8-b5ec-599a9c305d4a": "De inbox van deze persoon zit vol",
+  "f9735e0b-84b6-4f9f-a376-c171bacc9824": "Mogelijks ongeldig e-mailadres",
+  "7f3706ef-3d92-4e2d-ac88-84ede374ac7c": "Mogelijks ongeldig e-mailadres (waarschijnlijk typefout in domeinnaam)",
+  "4770f2c6-774f-4b5d-96fc-6226c7c57573": "Mogelijks een doorverwijzingslus of ongeldig e-mailadres",
+  "7f8ae6ce-ac5d-48e8-aa9f-223a849aab02": "Onbestaand e-mailadres",
+  "9a1ce222-c80d-4690-97be-0a896f2aa2ad": "of",
+  "ab204a0e-c114-4c5a-8f86-95aafe9464b0": "een bepaalde standaard leeftijdsgroep",
+  "1a537046-de7c-45ba-a990-da2fccd54325": "{firstName} moet ingeschreven zijn voor {aOrB} om voor {group} te kunnen inschrijven",
+  "a5754a6a-a584-448f-ae31-30262c8ab868": "{firstName} moet ingeschreven zijn voor bepaalde groepen om voor {group} te kunnen inschrijven",
+  "387311b4-eeed-48f5-950d-048ac0021666": "{firstName} moet ingeschreven zijn voor een bepaalde groep om voor {group} te kunnen inschrijven",
+  "f3c6e2b1-2f3a-4e2f-8f7a-1e5f3d3c8e2a": "todo"
 }
