--- a/shared/locales/src/digit/machine-fr.json
+++ b/shared/locales/src/digit/machine-fr.json
@@ -19,6 +19,10 @@
     "original": "Sla een kopie van jouw zaalplan op zodat je het kan delen met andere groepen.",
     "translation": "Enregistrez une copie de votre plan de salle afin de pouvoir le partager avec d'autres groupes."
   },
+  "040cc66c-e27f-4822-87ad-722bca4f5038": {
+    "original": "Kies of je het bericht wilt publiceren in ‘Mijn account’ en/of versturen via e-mail via de knoppen bovenaan",
+    "translation": "Choisissez si vous souhaitez publier le message dans ‘Mon compte’ et/ou l'envoyer par e-mail à l'aide des boutons ci-dessus"
+  },
   "05479234-2977-4bfd-a44b-924b01021b6e": {
     "original": "Op aanraden van andere groep / persoon",
     "translation": "Sur les conseils d'un autre groupe/d'une autre personne"
@@ -67,6 +71,10 @@
     "original": "Niet alle gegevens van jouw groep werden in het Stripe dashboard ingevuld. Kijk na of alles werd ingevuld. Volgende zaken zouden ontbreken:",
     "translation": "Toutes les données de votre groupe n'ont pas été saisies dans le tableau de bord Stripe. Vérifiez si tout a été saisi. Les éléments suivants pourraient manquer :"
   },
+  "0cc07b8f-9eaf-413a-9c2d-17363611f2d4": {
+    "original": "Dit bericht is enkel zichtbaar in ‘Mijn account’",
+    "translation": "Ce message est uniquement visible dans ‘Mon compte’"
+  },
   "0d7ce596-ad47-490d-b619-0cb1f1ae84ec": {
     "original": "Leden kunnen hun openstaand bedrag betalen door naar ‘Mijn account’ te gaan. Bovenaan zullen ze bij 'snelle acties' een knop zien waarmee ze hun openstaand bedrag kunnen betalen (je kan een e-mail sturen met een inlogknop om naar ‘Mijn account’ te gaan).",
     "translation": "Les membres peuvent payer leur montant en suspens en allant sur ‘Mon compte’. En haut, ils verront sous ‘actions rapides’ un bouton leur permettant de payer leur montant en suspens (vous pouvez envoyer un e-mail avec un bouton de connexion pour accéder à ‘Mon compte’)."
@@ -110,6 +118,10 @@
   "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": {
     "original": "*Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in ‘Mijn account’ vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
     "translation": "*Vous pouvez reporter un montant dû - par exemple, pour un paiement échelonné ou une période d'essai. Il n'apparaît comme action rapide dans « Mon compte » qu'à partir d'une semaine avant cette date (avec un éventuel e-mail automatique) et doit être payé à la date indiquée. Il est possible de payer plus tôt, mais ce n'est certainement pas obligatoire."
+  },
+  "18a411e7-8fec-4d99-bde1-0cbc9c3f5cf8": {
+    "original": "Je kan op ‘Mijn account’ een nieuw account aanmaken op het e-mailadres {email}.",
+    "translation": "Vous pouvez créer un nouveau compte dans ‘Mon compte’ avec l’adresse e-mail {email}."
   },
   "18a41eda-92fd-46a6-acc1-fc35536b86b4": {
     "original": "Beperk tot bepaalde lokale groepen (tags)",
@@ -295,6 +307,10 @@
     "original": "Je kan zelf ook leden inschrijven voor deze activiteit. Jouw groep betaalt dan meteen de kostprijs aan de organisator, waarna Ravot automatisch één of meerdere openstaande bedragen aanmaakt van de ingeschreven leden aan jouw groep (te betalen via ‘Mijn account’ of manueel betaling te registreren).",
     "translation": "Vous pouvez également inscrire vous-même des membres à cette activité. Votre groupe paie alors immédiatement le prix à l'organisateur, après quoi Ravot crée automatiquement un ou plusieurs montants dus des membres inscrits à votre groupe (à payer via « Mon compte » ou à enregistrer manuellement le paiement)."
   },
+  "3ab6ddc1-7ddc-4671-95d2-64994a5d36cc": {
+    "original": "Je kan op ‘Mijn account’ een nieuw account aanmaken op het e-mailadres {email}",
+    "translation": "Vous pouvez créer un nouveau compte dans ‘Mon compte’ avec l’adresse e-mail {email}"
+  },
   "3c584bf6-7e0a-4348-a5e9-2bc0bcb00bde": {
     "original": "Schulden van groepen",
     "translation": "Dettes des groupes"
@@ -302,6 +318,10 @@
   "3c710008-5f1f-477b-9ba3-b355d47bf858": {
     "original": "Je kan op ‘Mijn account’ een nieuw account aanmaken met het e-mailadres",
     "translation": "Vous pouvez créer un nouveau compte sur ‘Mon compte’ avec l'adresse e-mail"
+  },
+  "3e8dba08-a505-41ec-96c1-b2b5c1c17852": {
+    "original": "Je moet een platformbeheerder zijn om inactieve groepen te bekijken",
+    "translation": "Vous devez être gestionnaire de la plateforme pour voir les groupes inactifs."
   },
   "3e94193d-873b-4770-ba03-5f7528debf2c": {
     "original": "Leden kunnen zelfstandig inschrijven via ‘Mijn account’. Dit is een link die je op jouw website kan plaatsen of kan versturen via e-mail. Daarnaast kan je leden ook uitnodigen om in te schrijven, dat doe je door ze eerst toe te voegen in Ravot en daarna een e-mail te sturen waarbij je de 'magische knop' onderaan toevoegt.",
@@ -443,6 +463,10 @@
     "original": "Aanrekening via KSA Nationaal",
     "translation": "Facturation via KSA National"
   },
+  "5403b466-98fe-48ac-beff-38acf7c9734d": {
+    "original": "Je kan op ‘Mijn account’ inloggen op {email}.",
+    "translation": "Vous pouvez vous connecter dans ‘Mon compte’ avec {email}."
+  },
   "550e876b-f397-44a5-9e0a-fb5ce6df3a40": {
     "original": "Gebruik de boekhoudmodule van deze groep om een zicht te krijgen op alle betalingen.",
     "translation": "Utilisez le module de comptabilité de ce groupe pour avoir un aperçu de tous les paiements."
@@ -566,6 +590,10 @@
   "6793e0dc-66f0-4a70-b8ac-fb41e2063871": {
     "original": "Naam van deze groep (kort)",
     "translation": "Nom de ce groupe (court)"
+  },
+  "6804cf8f-b057-41ce-a1b6-9b4f314dcab8": {
+    "original": "Toon in ‘Mijn account’",
+    "translation": "Afficher dans ‘Mon compte’"
   },
   "68914509-aa54-40c7-9f53-7b8a02149198": {
     "original": "Ravot",
@@ -743,6 +771,10 @@
     "original": "Reken een bedrag aan aan de {count} geselecteerde groepen.",
     "translation": "Facturez un montant aux {count} groupes sélectionnés."
   },
+  "890739a4-277c-4757-b6e6-c9f535d138a3": {
+    "original": "Je kan de inhoud van een bericht wijzigen, maar dit heeft enkel invloed op het zichtbare bericht in ‘Mijn account’.",
+    "translation": "Vous pouvez modifier le contenu d’un message, mais cela n’affecte que le message visible dans ‘Mon compte’."
+  },
   "89a760d7-8995-458c-9635-da104971e95c": {
     "original": "Via proefperiodes kan je nieuwe leden de kans geven om in te schrijven zonder te (laten) betalen. Na een ingestelde periode krijgen ze vervolgens een betaalverzoek (vroeger betalen is steeds mogelijk) en kunnen ze betalen via ‘Mijn account’. Eenmaal de proefverzekering verlopen is, komen deze leden op de eerstvolgende aanrekening door KSA Nationaal. Als je leden voor het einde van de proefperiode terug uitschrijft, wordt het openstaande bedrag ook verwijderd.",
     "translation": "Grâce à une période d'essai, vous pouvez donner aux nouveaux membres la possibilité de s'inscrire sans devoir payer tout de suite. Après la période définie, ils recevront une demande de paiement (le paiement anticipé reste toujours possible) et pourront régler leur cotisation via \"Mon compte\". Une fois que l'assurance d'essai a expiré, ces membres seront repris sur la première facture suivante, émise par KSA Nationaal. Si un membre est désinscrit avant la fin de la période d'essai, le montant dû sera annulé."
@@ -770,6 +802,10 @@
   "8cba151c-54df-4786-8d37-bf2af2005753": {
     "original": "Ticketverkoop via Ravot",
     "translation": "Vente de billets via Ravot"
+  },
+  "8e074663-072b-4331-b6e9-e472969437a2": {
+    "original": "Stel in of het bericht zichtbaar is in ‘Mijn account’ of niet.",
+    "translation": "Définissez si le message est visible dans ‘Mon compte’ ou non."
   },
   "8e243505-26f6-4505-9317-c871fa1df324": {
     "original": "Nog geen bankrekeningnummer ingesteld",
@@ -851,6 +887,10 @@
     "original": "Hoog",
     "translation": "Haut"
   },
+  "98603c16-adf9-4aa9-9685-4a1199dd04d4": {
+    "original": "Ben je zeker dat je dit bericht in ‘Mijn account’ wilt publiceren?",
+    "translation": "Es-tu sûr de vouloir publier ce message dans ‘Mon compte’ ?"
+  },
   "98d05123-a351-4fb7-a0d7-87f46bcd127d": {
     "original": "Je ontvangt een extra bevestiging via e-mail. Als er in de toekomst gegevens wijzigen kan je die vanaf nu beheren via ‘Mijn account’.",
     "translation": "Vous recevrez une confirmation supplémentaire par e-mail. Si des données changent à l'avenir, vous pourrez désormais les gérer via ‘Mon compte’."
@@ -872,8 +912,8 @@
     "translation": "Facultatif"
   },
   "9ec8b45b-3321-4c1a-90bb-74e22c3e7f09": {
-    "original": "Een hoofdbeheerder van jouw groep moet eerst e-mailadressen instellen voor je een e-mail kan versturen.",
-    "translation": "Un administrateur principal de votre groupe doit d'abord définir des adresses e-mail pour que vous puissiez envoyer un e-mail."
+    "original": "Een hoofdbeheerder van jouw groep moet eerst een afzender toevoegen die je kan gebruiken voor je een bericht kan versturen.",
+    "translation": "Un administrateur principal de votre groupe doit d'abord ajouter un expéditeur que vous pouvez utiliser avant d'envoyer un message."
   },
   "9f1a0032-32dd-48fd-9d04-0b20bd86aefb": {
     "original": "Terug naar Ravot",
@@ -1238,6 +1278,10 @@
   "db492b1b-51de-48f1-b620-8bdc6dc5c3db": {
     "original": "Stop inschrijvingen van leden via ‘Mijn account’. Na het sluiten van de inschrijvingen kan je de groep ook eventueel archiveren.",
     "translation": "Arrêter les inscriptions des membres via « Mon compte ». Après la fermeture des inscriptions, vous pouvez également archiver le groupe."
+  },
+  "db9f28bd-d199-4a25-aa06-b6435f092f20": {
+    "original": "In sommige situaties (bv. in combinatie met artikelvoorwaarden), is het mogelijk dat er meerdere productkortingen in een winkelmandje actief zijn. Ravot kan dan de korting op hetzelfde item geven, als dat voordeliger zou zijn.",
+    "translation": "Dans certains cas (par exemple avec des conditions d'article), il est possible que plusieurs réductions produit soient actives dans un panier. Ravot peut alors appliquer la réduction sur le même article si cela est plus avantageux."
   },
   "de1d5cdf-6aa6-4912-828a-82cb53f8abf6": {
     "original": "Dit is geen geldig zaalplan uit Ravot",
