Updated messages tab description

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5502,7 +5502,7 @@
   "94adb4e0-2ef1-4ee8-9f02-5a76efa51c1d": "De afzender die je hebt gekozen bestaat niet meer. Probeer een andere afzender te kiezen. Herlaad indien nodig de app.",
   "f08cccb3-faf9-473f-b729-16120fadec9c": "De afzender van deze email bestaat niet meer. Probeer een andere afzender te kiezen.",
   "a6304a41-8c83-419b-8e7e-c26f4a047c19": "Berichten",
-  "feae4831-c229-4b2a-8dc1-c65184cbdfec": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
+  "feae4831-c229-4b2a-8dc1-c65184cbdfec": "Hier vind je een overzicht van alle verzonden berichten. Wil je graag een bericht versturen? Ga dan naar de leden of bestellingen die je wilt contacteren, maak eventueel een selectie, en klik bovenaan op het enveloppe-icoontje.",
   "6e1f9492-f036-4b73-8e85-ccbae0d31ad7": "Bericht niet gevonden",
   "39a982c1-916a-43da-857d-a15f67c96c62": "Verzonden op",
   "52961dd4-be19-47a1-abe6-1e3c34e8157c": "Aangemaakt op",
